# internal/models/constants.go
@@ -8,11 +8,9 @@ const (
 	SourceTypeCustom   int16 = 3
 )
 
-// Media type constants (aligned with Rust media_type).
+// Media type constants.
 const (
 	MediaTypeLivestream int16 = 0
 	MediaTypeMovie      int16 = 1
 	MediaTypeSerie      int16 = 2
-	MediaTypeGroup      int16 = 3
-	MediaTypeSeason     int16 = 4
 )
